force-app/main/permissionsValidator/objects/Permission_Definition__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>The API Name of the metadata type.</description>
    <inlineHelpText>The API Name of the metadata type.</inlineHelpText>
    <label>API Name</label>
    <length>62</length>
    <required>true</required>
    <type>Text</type>
</CustomField>