force-app/main/permissionsValidator/objects/Permission_Definition__mdt/fields/Create__c.field-meta.xml
<CustomField>
    <fullName>Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not create access is required for the feature.</description>
    <inlineHelpText>Whether or not create access is required for the feature.</inlineHelpText>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>