force-app/main/permissionsValidator/objects/Permission_Definition__mdt/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not delete access is required for the feature.</description>
    <inlineHelpText>Whether or not delete access is required for the feature.</inlineHelpText>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>