force-app/main/permissionsValidator/objects/Permission_Definition__mdt/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <description>The type of metadata to apply the changes to such as Apex Class, Permission, SObject, SObjectField, or Record Type.</description>
    <inlineHelpText>The type of metadata to apply the changes to such as Apex Class, Permission, SObject, SObjectField, or Record Type.</inlineHelpText>
    <label>Metadata Type</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>